feat: dropdown & toolbat

--- a/src/components/terminal/Terminal.scss
+++ b/src/components/terminal/Terminal.scss
@@ -1,29 +1,12 @@
 @import "src/styles/colors";
 
-$header-height: 2rem;
-
 .terminal {
   width: 100vw;
   height: 100vh;
-  background: $dark;
+  background: $dark-500;
   padding: .5rem;
   color: $light;
   cursor: text;
-
-  header {
-    height: $header-height;
-    cursor: auto;
-
-    .terminal__bar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: $header-height;
-      background-color: $grey;
-      box-shadow: 0 0 0 1px black;
-    }
-  }
 
   p {
     margin: 0;
