--- a/src/components/resume/Resume.scss
+++ b/src/components/resume/Resume.scss
@@ -60,13 +60,16 @@ $gitlab-orange: #1068bf;
     }
 
     .contact {
-      display: flex;
-      justify-content: space-between;
+      td {
+        padding: .25rem 0;
 
-      a,
-      p {
-        font-size: 14px;
-        margin-bottom: .5rem;
+        a {
+          color: $text-primary !important;
+        }
+      }
+
+      td:nth-child(2) {
+        padding-left: 1rem;
       }
     }
   }
